--- a/prime_numbers.ipynb
+++ b/prime_numbers.ipynb
@@ -2,35 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Do not use any entries other than integer values\n"
+     "text": "[2, 3, 5, 7, 11, 13, 17, 19]\n"
     }
    ],
    "source": [
-    "num = input(\"Enter the number for Armstrong test : \")\n",
-    "try:\n",
-    "    val = int(num)\n",
-    "    if val <= 1:\n",
-    "        print(f\"{val} is not a prime number\")\n",
-    "    else:\n",
-    "        for i in range(2, val//2):\n",
-    "            prime = False if val%i == 0 else True\n",
-    "            if prime == False:\n",
-    "                break\n",
-    "        if prime:\n",
-    "            print(f\"{val}  is a Prime number\")\n",
-    "        else:\n",
-    "            print(f\"{val}  is not a Prime number\")\n",
-    "    if val == 73939133:\n",
-    "        print(\"This number is a magical number. All parts of this number are also prime numbers.\")\n",
+    "num = int(input(\"Enter the limit number for prime numbers : \"))\n",
     "\n",
-    "except:\n",
-    "    print(\"Do not use any entries other than integer values\")"
+    "list = []\n",
+    "\n",
+    "for i in range(1, num + 1):\n",
+    "    \n",
+    "    count = 0\n",
+    "    for j in range(1, i+1):\n",
+    "        if i%j == 0:\n",
+    "            count +=1\n",
+    "            \n",
+    "    if count == 2:\n",
+    "        list.append(i)\n",
+    "       \n",
+    "print(list)"
    ]
   },
   {
